<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FragmentTransactions"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblCurrentBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/current_balance"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:paddingHorizontal="16dp"/>

        <TextView
            android:id="@+id/txtCurrentBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="4dp"
            android:layout_below="@id/lblCurrentBalance"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textSize="32sp"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:paddingHorizontal="16dp"/>

        <HorizontalScrollView
            android:id="@+id/horizontalView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/txtCurrentBalance"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fillViewport="true"
            android:measureAllChildren="false"
            android:scrollbars="none"
            android:background="@drawable/shape_border_bottom">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/allTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/all_time"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/thisYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/this_year"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/jan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/jan"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/feb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/feb"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/mar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/mar"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/apr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/apr"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/may"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/may"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/jun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/jun"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/jul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/jul"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/aug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/aug"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/sep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/sep"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/oct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/oct"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/nov"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/nov"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
                <TextView
                    android:id="@+id/dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="24dp"
                    android:text="@string/dec"
                    android:textSize="12sp"
                    android:paddingHorizontal="16dp"/>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/incomeExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/horizontalView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/txtIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="1dp"
                    android:background="@drawable/shape_border_bottom_green"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/txtExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="1dp"
                    android:background="@drawable/shape_border_bottom_red"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_below="@id/incomeExpenses"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:layout_marginBottom="40dp"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftover"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txtLeftOver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="@drawable/shape_border_bottom_blue"/>
        </LinearLayout>

        <TextView
            android:id="@+id/transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_below="@id/leftover"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:paddingVertical="2dp"
            android:text="Transactions"
            android:background="@drawable/shape_border_top_bottom"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddTransaction"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/transactions"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="Add Transaction"
            android:textColor="@color/white"
            android:background="@drawable/shape_button_green"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/btnAddTransaction"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</ScrollView>