<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignupActivity"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/bgsignup">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_signup_button"
            android:text="@string/login"
            android:textColor="@color/black"
            android:onClick="LoginPage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.43" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_login_button"
            android:text="@string/signup"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.053" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="SignInGoogle"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@mipmap/google" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="SignInFacebook"
            app:layout_constraintTop_toBottomOf="@+id/imageView1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintVertical_bias="0.021"
            app:srcCompat="@mipmap/facebook" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="SignInTwitter"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintVertical_bias="0.031"
            app:srcCompat="@mipmap/twitter" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.216" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/username"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintBottom_toTopOf="@+id/txtFullname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.805"
            app:layout_constraintVertical_bias="1" />

        <EditText
            android:id="@+id/txtFullname"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_text_view"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:ems="10"
            android:hint="@string/hint1"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintBottom_toTopOf="@id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.38" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/email"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/txtFullname"
            app:layout_constraintBottom_toTopOf="@id/txtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.04" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_text_view"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:ems="10"
            android:hint="@string/hint2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintBottom_toTopOf="@id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.003" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/password"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            app:layout_constraintBottom_toTopOf="@id/txtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.04" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_text_view"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:ems="10"
            android:hint="@string/hint3"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.003" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            app:layout_constraintBottom_toTopOf="@id/txtConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.07" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_text_view"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:ems="10"
            android:hint="@string/hint4"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@id/btnSubmitSignup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmitSignup"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_button"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:onClick="SubmitSignup"
            app:layout_constraintTop_toBottomOf="@id/txtConfirmPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.804"
            app:layout_constraintVertical_bias="0.966" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>